--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fast64",
-  "version": "0.5.0",
+  "name": "@superhuman/fast64",
+  "version": "0.6.0",
   "license": "Apache",
   "repository": "https://github.com/ConradIrwin/fast64",
   "main": "index.js",
