Use StandardJS, cleanup tests.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
   "name": "@superhuman/fast64",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "license": "Apache",
   "repository": "https://github.com/ConradIrwin/fast64",
   "main": "index.js",
-  "description":"The fastest in-browser base64 library",
+  "description": "The fastest in-browser base64 library",
   "devDependencies": {
     "chai": "^3.4.1",
-    "mocha": "^2.3.4"
+    "mocha": "^5.2.0"
+  },
+  "standard": {
+    "ignore": [],
+    "globals": [
+      "Base64",
+      "TextDecoder",
+      "TextEncoder",
+      "context",
+      "describe",
+      "expect",
+      "it",
+      "performance"
+    ]
   }
 }
